Change location of css href

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="telegram,bot,ytKileroy,language,google speech,software,speech to text,speechtotext,stt">
     <title>YTKileroy | Telegram Bots</title>
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Roboto">
   </head>
   <body>
