Fix telegrambots link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="container">
         <a href="https://www.patreon.com/YTKileroy" class="logo">YTKileroy</a>
         <a href="https://www.patreon.com/YTKileroy" class="link">Patreon</a>
-        <a href="/telegrambots/" class="link">Telegram Bots</a>
+        <a href="/TelegramBots/" class="link">Telegram Bots</a>
       </div>
     </nav>
     <section>
