--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="https://t.me/listenformebot">@ListenForMeBot</a> is a telegram bot that enables users to use <a href="https://cloud.google.com/speech/">Google's Cloud Speech API</a> to convert Telegram's audio messages into text with support of over 80 languages and variants!
           </p>
           <p>
-            If you wish to help support development of this bot, please consider <a href="https://www.patreon.com/YTKileroy">becoming a my patron!</a>
+            If you wish to help support development of this bot, please consider <a href="https://www.patreon.com/YTKileroy">becoming my patron!</a>
           </p>
           <h2>Commands</h2>
           <table>
