Improve bitcoin donation button

--- a/index.html
+++ b/index.html
@@ -44,6 +44,21 @@
                 <a href="bitcoin:13uAWw4wt3mE5gEF13gdmTVhH8yxfjh3Lw?message=For%20The%20Bots" title="Donate Bitcoin">
                   <img src="res/bitcoin_icon.png">
                 </a>
+                <div class="bitcoin-addr">
+                  <h2>Donate Bitcoin</h2>
+                  <table>
+                    <tbody>
+                      <tr>
+                        <td>Address</td>
+                        <td>13uAWw4wt3mE5gEF13gdmTVhH8yxfjh3Lw</td>
+                      </tr>
+                      <tr>
+                        <td>Message</td>
+                        <td>For The Bot</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
               </div>
               <div class="donate-button" hover="Patreon">
                 <a href="https://www.patreon.com/YTKileroy" title="Be My Patron">
